--- a/templates/index.html
+++ b/templates/index.html
@@ -44,14 +44,12 @@ getUserLocation();
               <img src="placeholder.gif" alt="Nearest Bikes; number bikes in 250/500mt" height="80">
                 </div>
 
-              <!--AVAILABILITY FORECAST SUMMARY-->
-              <div class="availability_forecast">
-              <img src="placeholder.gif" alt="Forecasted Availability (per hour)" height="80">
-                </div>
-
               <!--TODAY'S BIKING WEATHER SUMMARY-->
               <div class="weather_summary">
-              <img src="placeholder.gif" alt="Today's Weather Summary" height="80">
+                  <a class="weatherwidget-io" href="https://forecast7.com/en/53d35n6d26/dublin/" data-label_1="DUBLIN" data-label_2="WEATHER" data-icons="Climacons Animated" data-days="3" data-theme="pure" >DUBLIN WEATHER</a>
+                  <script>
+                  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+                  </script>
                 </div>
                 </div>
 
